--- a/reactYandex/src/index.css
+++ b/reactYandex/src/index.css
@@ -72,7 +72,7 @@ header {
   background: #fafafa;
 }
 
-main{
+.container{
 
   /* max-width: 650px;
   max-height: 650px;
@@ -80,10 +80,10 @@ main{
   padding: 1rem;
   padding-top: 2 rem;*/
   background-color: #F8604A;
-  display:block;
-  max-width: 350px;
-  border: 1px solid #ccc;
+  width: 330px;
+  height: 210px;
   border-radius: 20px;  
+  margin: 20px;
 }
 .buttons{
   margin: 0 auto;
@@ -91,10 +91,7 @@ main{
   padding-top: 2 rem;
 }
 
-h3{
-  margin-left: 0.5rem;
-  margin-bottom: 1rem;
-}
+
 section ul{
   list-style: none;
 }
@@ -115,6 +112,17 @@ h4{
   margin-bottom: 1rem;
   color: #f9f9f9;
 }
+h3{
+  margin-left: 0.5rem;
+  margin-bottom: 1rem;
+}
+h1{
+  padding: 10px;
+  margin: 30px;
+}
+span{
+  color: red;
+}
 
 .low_buttons{
   display: flex;
@@ -122,4 +130,19 @@ h4{
 }
 .upper_buttons{
   text-align: center;
+}
+
+main{
+  height: 900px;
+  background-color: #ffffff;
+  border-radius: 20px;
+  margin: 50px;
+
+  -webkit-box-shadow: 5px 5px 10px 2px rgba(34, 60, 80, 0.2);
+  -moz-box-shadow: 5px 5px 10px 2px rgba(34, 60, 80, 0.2);
+  box-shadow: 5px 5px 10px 2px rgba(34, 60, 80, 0.2);
+}
+.tables{
+  margin-left: 150px;
+  display:flex;
 }
